...
          <Text style={styles.bold}>To continue, please log in or register.</Text>
        </View>
      </View>

      <View style={styles.buttonsWrapper}>

        <StandardButton title="Log in"
          onPress={ () => { appState.changeState('Login') } }
        />

        <StandardButton title="Register"
          onPress={ () => { appState.changeState('Register') } }
          styles={styleRegisterButton}
...
