...
          style={styles.wideTextInput}
          onChangeText={setEmail}
          value={email}
        />
      </View>

      <Text style={styles.text1}>Password:</Text>

      <View style={styles.wideTextInputWrapper}>
        <TextInput
          secureTextEntry={true}
          style={styles.wideTextInput}
          onChangeText={setPassword}
...
